--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "backend",
+  "name": "job-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Job Description",
   "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "client": "npm start --prefix ../frontend"
   },
   "author": "",
   "license": "ISC",
@@ -19,8 +21,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
+    "job-backend": "file:",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "path": "^0.12.7",
     "validator": "^13.11.0"
   }
 }
